fixed weird alignment

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -81,9 +81,9 @@
     padding-bottom: 3%;
   }
   .Skills h4 {
-    padding-left: 26%;
+    padding-left: 16%;
     width: 48%;
-    padding-right: 26%;
+    padding-right: 16%;
     font-size: 30px;
     padding-bottom: 1%;
     margin-top: 0rem;
